# alg_drawing

./: .gitignore  CMakeLists.txt  main.c
src/: app.c  app.h  display.c  display.h  draw.c  draw.h  main.c  types.h  ui.c  ui.h
